<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>org.openconext</groupId>
    <artifactId>oidcng-parent</artifactId>
    <version>8.0.3-SNAPSHOT</version>
    <name>oidcng</name>
    <packaging>pom</packaging>

    <modules>
        <module>oidc</module>
        <module>release</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <bouncycastle.version>1.80</bouncycastle.version>
        <commons-io.version>2.19.0</commons-io.version>
        <dependency-check-maven.version>12.1.1</dependency-check-maven.version>
        <git-commit-id-maven-plugin.version>9.0.1</git-commit-id-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
        <jackson-dataformat-xml.version>2.15.0</jackson-dataformat-xml.version>
        <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
        <java.version>21</java.version>
        <javase.version>3.5.3</javase.version>
        <junit-vintage-engine.version>5.10.2</junit-vintage-engine.version>
        <logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
        <mockito-core.version>4.2.0</mockito-core.version>
        <mongock-bom.version>4.3.8</mongock-bom.version>
        <oauth2-oidc-sdk.version>11.23.1</oauth2-oidc-sdk.version>
        <opensaml-saml.version>5.1.4</opensaml-saml.version>
        <protobuf-java.version>4.32.0</protobuf-java.version>
        <rest-assured.version>5.2.0</rest-assured.version>
        <require-maven.version>3.8.4</require-maven.version>
        <spring-session-data-mongodb.version>3.4.1</spring-session-data-mongodb.version>
        <spring-session-bom.version>2021.2.3</spring-session-bom.version>
        <threshold-logger.version>2.0.1</threshold-logger.version>
        <tink.version>1.5.0</tink.version>
        <wagon-webdav-jackrabbit.version>3.5.3</wagon-webdav-jackrabbit.version>
        <wiremock-standalone.version>3.6.0</wiremock-standalone.version>
        <xmlsec.version>4.0.3</xmlsec.version>
    </properties>

    <profiles>
        <profile>
            <id>security-updates</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>${dependency-check-maven.version}</version>
                        <configuration>
                            <format>ALL</format>
                            <failBuildOnCVSS>7</failBuildOnCVSS>
                            <failBuildOnAnyVulnerability>true</failBuildOnAnyVulnerability>
                            <suppressionFile>release/src/suppressions/ignore.xml</suppressionFile>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>aggregate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>${require-maven.version}</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav-jackrabbit</artifactId>
                <version>3.5.3</version>
            </extension>
        </extensions>
    </build>

    <repositories>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
            <id>spring-milestones</id>
            <name>spring-milestones</name>
            <url>https://repo.spring.io/milestone/</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
            <id>openconext</id>
            <name>openconext</name>
            <url>https://build.openconext.org/repository/public/releases/</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
            <id>shibboleth</id>
            <name>shibboleth</name>
            <url>https://build.shibboleth.net/maven/releases/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>openconext-releases</id>
            <name>OpenConext public releases repository</name>
            <url>dav:https://build.openconext.org/repository/public/releases</url>
        </repository>
        <snapshotRepository>
            <id>openconext-snapshots</id>
            <name>OpenConext public snapshot repository</name>
            <url>dav:https://build.openconext.org/repository/public/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
